Update 'raqm15o6t-java-quarkus' component image to: quay.io/rhtap-test-organization-jk/rhtap-qe:57914af6fd082a3d3b770cc9f163a16b4f1c40c7@sha256:714c0a8d2592c7eb22d81690bdb7ec77c197ec39b38c7896dd8525113503b0ab

--- a/components/raqm15o6t-java-quarkus/overlays/development/deployment-patch.yaml
+++ b/components/raqm15o6t-java-quarkus/overlays/development/deployment-patch.yaml
@@ -1,16 +1,16 @@
 apiVersion: apps/v1
 kind: Deployment
-metadata:   
-  annotations:  
+metadata:
+  annotations:
     tad.gitops.set/image: ".spec.template.spec.containers[0].image"
     tad.gitops.get/image: ".spec.template.spec.containers[0].image"
     tad.gitops.set/replicas: ".spec.replicas"
-    tad.gitops.get/replicas: ".spec.replicas" 
+    tad.gitops.get/replicas: ".spec.replicas"
   name: raqm15o6t-java-quarkus
 spec:
-  replicas: 1 
-  template: 
+  replicas: 1
+  template:
     spec:
       containers:
-      - image: quay.io/redhat-appstudio/dance-bootstrap-app:latest
-        name: container-image  
+        - image: quay.io/rhtap-test-organization-jk/rhtap-qe:57914af6fd082a3d3b770cc9f163a16b4f1c40c7@sha256:714c0a8d2592c7eb22d81690bdb7ec77c197ec39b38c7896dd8525113503b0ab
+          name: container-image
